deploy: c52a2891829383478b224d0b236de2daa9f4c401

--- a/growthbook/sdk/java/models/FeatureResultSource.html
+++ b/growthbook/sdk/java/models/FeatureResultSource.html
@@ -162,25 +162,29 @@ the order they are declared.</div>
 <li>
 <section class="detail" id="UNKNOWN_FEATURE">
 <h3>UNKNOWN_FEATURE</h3>
-<div class="member-signature"><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">UNKNOWN_FEATURE</span></div>
+<div class="member-signature"><span class="annotations">@SerializedName("unknownFeature")
+</span><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">UNKNOWN_FEATURE</span></div>
 </section>
 </li>
 <li>
 <section class="detail" id="DEFAULT_VALUE">
 <h3>DEFAULT_VALUE</h3>
-<div class="member-signature"><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">DEFAULT_VALUE</span></div>
+<div class="member-signature"><span class="annotations">@SerializedName("defaultValue")
+</span><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">DEFAULT_VALUE</span></div>
 </section>
 </li>
 <li>
 <section class="detail" id="FORCE">
 <h3>FORCE</h3>
-<div class="member-signature"><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">FORCE</span></div>
+<div class="member-signature"><span class="annotations">@SerializedName("force")
+</span><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">FORCE</span></div>
 </section>
 </li>
 <li>
 <section class="detail" id="EXPERIMENT">
 <h3>EXPERIMENT</h3>
-<div class="member-signature"><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">EXPERIMENT</span></div>
+<div class="member-signature"><span class="annotations">@SerializedName("experiment")
+</span><span class="modifiers">public static final</span>&nbsp;<span class="return-type"><a href="FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></span>&nbsp;<span class="element-name">EXPERIMENT</span></div>
 </section>
 </li>
 </ul>
