--- a/index-all.html
+++ b/index-all.html
@@ -118,9 +118,13 @@ loadScripts(document, 'script');</script>
 </dl>
 <h2 class="title" id="I:G">G</h2>
 <dl class="index">
+<dt><a href="growthbook/sdk/java/models/BucketRange.html#getDeserializer()" class="member-name-link">getDeserializer()</a> - Static method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" title="class in growthbook.sdk.java.models">BucketRange</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/Namespace.html#getDeserializer()" class="member-name-link">getDeserializer()</a> - Static method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" title="class in growthbook.sdk.java.models">Namespace</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/services/GrowthBookJsonUtils.html#getInstance()" class="member-name-link">getInstance()</a> - Static method in class growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/GrowthBookJsonUtils.html" title="class in growthbook.sdk.java.services">GrowthBookJsonUtils</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/models/BucketRange.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" title="class in growthbook.sdk.java.models">BucketRange</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/Namespace.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" title="class in growthbook.sdk.java.models">Namespace</a></dt>
 <dd>&nbsp;</dd>
@@ -189,13 +193,19 @@ loadScripts(document, 'script');</script>
 </dl>
 <h2 class="title" id="I:T">T</h2>
 <dl class="index">
+<dt><a href="growthbook/sdk/java/models/BucketRange.html#toJson()" class="member-name-link">toJson()</a> - Method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" title="class in growthbook.sdk.java.models">BucketRange</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/Namespace.html#toJson()" class="member-name-link">toJson()</a> - Method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" title="class in growthbook.sdk.java.models">Namespace</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/UserAttributes.html#toJson()" class="member-name-link">toJson()</a> - Method in interface growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/UserAttributes.html" title="interface in growthbook.sdk.java.models">UserAttributes</a></dt>
 <dd>
 <div class="block">JSON representation of the attributes</div>
 </dd>
+<dt><a href="growthbook/sdk/java/models/BucketRange.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" title="class in growthbook.sdk.java.models">BucketRange</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/FeatureResultSource.html#toString()" class="member-name-link">toString()</a> - Method in enum class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResultSource.html" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/models/Namespace.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" title="class in growthbook.sdk.java.models">Namespace</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/models/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">TrackingCallback</a>&lt;<a href="growthbook/sdk/java/models/TrackingCallback.html" title="type parameter in TrackingCallback">ValueType</a>&gt; - Interface in <a href="growthbook/sdk/java/models/package-summary.html">growthbook.sdk.java.models</a></dt>
 <dd>&nbsp;</dd>
