--- a/growthbook/sdk/java/models/package-tree.html
+++ b/growthbook/sdk/java/models/package-tree.html
@@ -70,9 +70,12 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.models.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a>&lt;TrackingCallbackResultType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="TrackingResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">TrackingResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="Variation.html" class="type-name-link" title="class in growthbook.sdk.java.models">Variation</a></li>
 </ul>
 </li>
 </ul>
@@ -97,6 +100,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
 <li class="circle">growthbook.sdk.java.models.<a href="FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">Operator</a></li>
 </ul>
 </li>
 </ul>
