--- a/overview-tree.html
+++ b/overview-tree.html
@@ -60,31 +60,21 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">java.util.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/AbstractMap.html" class="type-name-link external-link" title="class or interface in java.util">AbstractMap</a>&lt;K,<wbr>V&gt; (implements java.util.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/Map.html" title="class or interface in java.util" class="external-link">Map</a>&lt;K,<wbr>V&gt;)
-<ul>
-<li class="circle">java.util.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/HashMap.html" class="type-name-link external-link" title="class or interface in java.util">HashMap</a>&lt;K,<wbr>V&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Cloneable.html" title="class or interface in java.lang" class="external-link">Cloneable</a>, java.util.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/Map.html" title="class or interface in java.util" class="external-link">Map</a>&lt;K,<wbr>V&gt;, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
-<ul>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ForcedVariationsHashMap.html" class="type-name-link" title="class in growthbook.sdk.java.models">ForcedVariationsHashMap</a> (implements growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ForcedVariationsMap.html" title="interface in growthbook.sdk.java.models">ForcedVariationsMap</a>)</li>
-</ul>
-</li>
-</ul>
-</li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">ConditionEvaluator</a> (implements growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/IConditionEvaluator.html" title="interface in growthbook.sdk.java.services">IConditionEvaluator</a>)</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a>&lt;TrackingCallbackResultType&gt;</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a></li>
+<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">ConditionEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.ContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context.ContextBuilder</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">ExperimentEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a> (implements growthbook.sdk.java.<a href="growthbook/sdk/java/IGrowthBook.html" title="interface in growthbook.sdk.java">IGrowthBook</a>)</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
 <li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">GrowthBookJsonUtils</a></li>
 <li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/GrowthBookUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">GrowthBookUtils</a></li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/MathUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">MathUtils</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/TrackingResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">TrackingResult</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/UrlUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">UrlUtils</a></li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Variation.html" class="type-name-link" title="class in growthbook.sdk.java.models">Variation</a></li>
 </ul>
 </li>
 </ul>
@@ -92,15 +82,8 @@ loadScripts(document, 'script');</script>
 <section class="hierarchy">
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/IConditionEvaluator.html" class="type-name-link" title="interface in growthbook.sdk.java.services">IConditionEvaluator</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/IGrowthBook.html" class="type-name-link" title="interface in growthbook.sdk.java">IGrowthBook</a></li>
-<li class="circle">java.util.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/util/Map.html" class="type-name-link external-link" title="class or interface in java.util">Map</a>&lt;K,<wbr>V&gt;
-<ul>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ForcedVariationsMap.html" class="type-name-link" title="interface in growthbook.sdk.java.models">ForcedVariationsMap</a></li>
-</ul>
-</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">TrackingCallback</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/UserAttributes.html" class="type-name-link" title="interface in growthbook.sdk.java.models">UserAttributes</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">ExperimentRunCallback</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.models">TrackingCallback</a></li>
 </ul>
 </section>
 <section class="hierarchy">
@@ -110,7 +93,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ConditionEvaluator.DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java.services">ConditionEvaluator.DataType</a></li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/DataType.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">DataType</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResultSource.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">FeatureResultSource</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Operator.html" class="type-name-link" title="enum class in growthbook.sdk.java.models">Operator</a></li>
 </ul>
