deploy: c3bc412a2652855e517c8f8b474dc5400e85c7b0

--- a/growthbook/sdk/java/models/package-tree.html
+++ b/growthbook/sdk/java/models/package-tree.html
@@ -65,6 +65,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.models.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureRule</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
 </ul>
 </li>
