--- a/overview-tree.html
+++ b/overview-tree.html
@@ -51,8 +51,8 @@ loadScripts(document, 'script');</script>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal">
 <li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a>, </li>
-<li><a href="growthbook/sdk/java/models/package-tree.html">growthbook.sdk.java.models</a>, </li>
-<li><a href="growthbook/sdk/java/services/package-tree.html">growthbook.sdk.java.services</a></li>
+<li><a href="growthbook/sdk/java/internal/services/package-tree.html">growthbook.sdk.java.internal.services</a>, </li>
+<li><a href="growthbook/sdk/java/models/package-tree.html">growthbook.sdk.java.models</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -61,19 +61,19 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.models">BucketRange</a></li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">ConditionEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ConditionEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Context.ContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.models">Context.ContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java.models">Experiment</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">ExperimentEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">ExperimentEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Feature.html" class="type-name-link" title="class in growthbook.sdk.java.models">Feature</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.services">FeatureEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureResult</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.models">FeatureRule</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">GrowthBookJsonUtils</a></li>
-<li class="circle">growthbook.sdk.java.services.<a href="growthbook/sdk/java/services/GrowthBookUtils.html" class="type-name-link" title="class in growthbook.sdk.java.services">GrowthBookUtils</a></li>
+<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookJsonUtils</a></li>
+<li class="circle">growthbook.sdk.java.internal.services.<a href="growthbook/sdk/java/internal/services/GrowthBookUtils.html" class="type-name-link" title="class in growthbook.sdk.java.internal.services">GrowthBookUtils</a></li>
 <li class="circle">growthbook.sdk.java.models.<a href="growthbook/sdk/java/models/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java.models">Namespace</a></li>
 </ul>
 </li>
